eccnodejs/k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/eccnodejs"
  name: eccnodejs-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - backend:
              service:
                name: eccnodejs-service
                port:
                  number: 3001
            path: /eccnodejs(/|$)(.*)
            pathType: ImplementationSpecific
